// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconMessenger /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconMessenger /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconMessenger /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconMessenger /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconMessenger /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconMessenger /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconMessenger /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconMessenger /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M128.4 28c-56 0-101.5 42.2-101.5 94.2 0 29.8 14.8 56.1 38.1 73.3V231l32.1-19.5c9.9 3 20.3 5.1 31.3 5.1 56.1 0 101.5-42.4 101.5-94.5S184.5 28 128.4 28zm9.9 125.6l-26.5-26.3-47.1 24.8 51.5-55.5 26.5 26.3 48.5-24.8-52.9 55.5z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMessenger /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
